# cmake-coderefinery

./: readme.md
workshop/6-ctest/: makefile  readme.md
workshop/6-ctest/src/: CMakeLists.txt  bank.cpp  exchange.cpp  test_bank.cpp  test_exchange.cpp
workshop/6-ctest/src/include/: bank.hpp  exchange.hpp
